# mini-butler

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  COPILOT_CONTEXT.md  COPILOT_USAGE.md  Dockerfile  KNOWN_ISSUES.md  README.md  TODO-BUG-FIX.md  commit_and_pr.sh  install.sh  plan.md  pyproject.toml  setup.sh
articles/: 01_defensive_tool_routing.md
bantz-ui/: .gitignore  Operations Center.html  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
bantz-ui/src/: App.tsx  index.css
bantz-ui/src-tauri/: Cargo.toml  tauri.conf.json
bantz-ui/src-tauri/capabilities/: default.json
bantz-ui/src-tauri/icons/: icon.icns
bantz-ui/src-tauri/src/: lib.rs  main.rs
deploy/: butler-ssh-tunnel@.service  butler-telegram@.service  butler@.service
eval/: routing_eval_results.json
src/bantz/: __main__.py  config.py
src/butler/: __main__.py  config.py
tests/agent/: test_affinity_engine.py  test_agent_manager.py  test_ambient.py  test_ambient_integration.py  test_app_detector.py  test_audio_ducker.py  test_awareness.py  test_dynamic_replanning.py  test_executor.py  test_ghost_loop.py  test_health.py  test_interventions.py  test_job_scheduler.py  test_notifier.py  test_observer.py  test_planner.py  test_proactive.py  test_standalone_ambient.py  test_sub_agent.py  test_tts.py  test_wake_word.py
tests/auth/: test_token_store.py
tests/cli/: test_setup_voice.py
tests/core/: test_affinity_rl_activation.py  test_brain_integrations.py  test_config_cli.py  test_context.py  test_core_stabilization.py  test_event_bus.py  (+17 more)
(+241 files in other folders)
